--- a/src/app/modules/auth/chnage-password/chnage-password.page.html
+++ b/src/app/modules/auth/chnage-password/chnage-password.page.html
@@ -32,14 +32,14 @@
         </ion-item>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf=" ischangePasswordSubmitted  && changePasswordErrorControl.code.errors?.required"
         >
           {{'please enter code verification' | translate}}
         </div>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="ischangePasswordSubmitted  && changePasswordErrorControl.code.errors?.minlength"
         >
           {{'code verification should be 4 numbers' | translate}}
@@ -94,7 +94,7 @@
         </ion-item>
 
         <ion-button expand="block" type="submit">
-          <span class="auth-btn"> {{"confirm"|translate}} </span>
+          <span class="fn-16 dalel-Bold"> {{"confirm"|translate}} </span>
         </ion-button>
       </form>
     </ion-card>
