--- a/src/app/modules/auth/code/code.page.html
+++ b/src/app/modules/auth/code/code.page.html
@@ -90,7 +90,7 @@
           </ion-col>
         </ion-row>
         <ion-button expand="block" type="submit">
-          <span class="auth-btn"> {{"confirm"|translate}} </span>
+          <span class=" fn-16 dalel-Bold"> {{"confirm"|translate}} </span>
         </ion-button>
       </form>
     </ion-card>
