--- a/src/app/modules/auth/password/password.page.html
+++ b/src/app/modules/auth/password/password.page.html
@@ -33,21 +33,21 @@
         </ion-item>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="isForgetPasswordSubmitted && forgetPasswordErrorControl.phoneNumber.errors?.required"
         >
           {{'please enter phone number' | translate}}
         </div>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="isForgetPasswordSubmitted && forgetPasswordErrorControl.phoneNumber.errors?.minlength"
         >
           {{'phone number should be 10 numbers' | translate}}
         </div>
 
         <ion-button expand="block" type="submit">
-          <span class="auth-btn"> {{"change password"|translate}} </span>
+          <span class="fn-16 dalel-Bold"> {{"change password"|translate}} </span>
         </ion-button>
       </form>
     </ion-card>
