--- a/src/app/modules/auth/phone-number/phone-number.page.html
+++ b/src/app/modules/auth/phone-number/phone-number.page.html
@@ -29,7 +29,7 @@
         </ion-item>
 
         <ion-button expand="block" type="submit">
-          <span class="auth-btn"> {{"confirm"|translate}} </span>
+          <span class=" fn-16 dalel-Bold"> {{"confirm"|translate}} </span>
         </ion-button>
       </form>
     </ion-card>
