--- a/src/app/modules/contact-us/contact-us.page.html
+++ b/src/app/modules/contact-us/contact-us.page.html
@@ -35,14 +35,14 @@
         </ion-item>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="isContactSubmitted && contactErrorControl.userName.errors?.required"
         >
           {{'please enter user name' | translate}}
         </div>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="isContactSubmitted && contactErrorControl.userName.errors?.minlength"
         >
           {{'user name should be min 2 chars long' | translate}}
@@ -64,14 +64,14 @@
         </ion-item>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="isContactSubmitted && contactErrorControl.phoneNumber.errors?.required"
         >
           {{'please enter phone number' | translate}}
         </div>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="isContactSubmitted && contactErrorControl.phoneNumber.errors?.minlength"
         >
           {{'phone number should be 10 numbers' | translate}}
@@ -93,21 +93,21 @@
         </ion-item>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="isContactSubmitted && contactErrorControl.email.errors?.required "
         >
           {{'please enter email' | translate}}
         </div>
 
         <div
-          class="error-box"
+          class="error-box fn-12"
           *ngIf="isContactSubmitted && contactErrorControl.email.errors?.pattern "
         >
           {{'please enter valid email' | translate}}
         </div>
 
         <ion-button expand="block" type="submit">
-          <span class="auth-btn"> {{ "send"|translate}} </span>
+          <span class=" fn-16 dalel-Bold"> {{ "send"|translate}} </span>
         </ion-button>
       </form>
     </ion-card>
