--- a/src/app/modules/image-modal/image-modal.page.html
+++ b/src/app/modules/image-modal/image-modal.page.html
@@ -14,7 +14,7 @@
 
   <ion-fab vertical="bottom" horizontal="center" slot="fixed">
     <ion-fab-button color="primary" (click)="closeModal()">
-      <ion-icon name="close"></ion-icon>
+      <ion-icon name="close" color="white"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
