--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -101,7 +101,7 @@
   </div>
 
   <ion-button expand="block" (click)="setOrderData()">
-    <span class="auth-btn fn-16 white-color dalel-Bold">
+    <span class=" fn-16 white-color dalel-Bold">
       {{ "confirm reservation"|translate}}
     </span>
   </ion-button>
