--- a/src/app/modules/reservation/reservation.page.html
+++ b/src/app/modules/reservation/reservation.page.html
@@ -18,7 +18,7 @@
   </ion-calendar>
 
   <ion-button expand="block" class="reservation-btn" (click)="completeReservation()">
-    <span class="auth-btn fn-16 white-color dalel-Bold">
+    <span class=" fn-16 white-color dalel-Bold">
       {{ "complete reservation"|translate}}
     </span>
   </ion-button>
