--- a/src/app/modules/search-filter/search-filter.page.html
+++ b/src/app/modules/search-filter/search-filter.page.html
@@ -226,7 +226,7 @@
   </div>
 
   <ion-button expand="block" (click)="getItemsByFilters()" [routerAnimation]>
-    <span class="auth-btn fn-16 white-color dalel-Bold">
+    <span class="fn-16 white-color dalel-Bold">
       {{ "search"|translate}}
     </span>
   </ion-button>
