--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -6,8 +6,8 @@
   class="header-height"
 ></app-header>
 
-<ion-content class="ion-padding">
-  <div class="item-image">
+<ion-content class="ion-padding" >
+  <div class="item-image" *ngIf="itemDetails">
     <img [src]="itemDetails?.first_image" />
     <ion-icon
       (click)="addToFavourite()"
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="services">
+  <div class="services" *ngIf="itemDetails">
     <div>
       <ion-icon src="./../../../assets/icon/icon1.svg"></ion-icon>
       <p class="fn-14 dalel-Regular secondary-color">
@@ -51,12 +51,12 @@
     </div>
   </div>
 
-  <div class="description">
+  <div class="description" *ngIf="itemDetails">
     <h5 class="fn-16 dalel-SemiBold">{{"description"|translate}}</h5>
     <p class="fn-12 dalel-Regular">{{itemDetails?.desc}}</p>
   </div>
 
-  <div class="place-images">
+  <div class="place-images" *ngIf="itemDetails">
     <div class="header">
       <div>
         <h5 class="fn-16 dalel-SemiBold">{{"place-images"|translate}}</h5>
@@ -87,7 +87,7 @@
     <div #map class="map"></div>
   </div>
 
-  <div class="rules">
+  <div class="rules" *ngIf="itemDetails">
     <div class="header">
       <h5 class="fn-16 dalel-SemiBold">{{"reservation-rules"|translate}}</h5>
     </div>
@@ -97,7 +97,7 @@
   </div>
 
   <ion-button expand="block" (click)=" storeOrder()">
-    <span class="auth-btn fn-16 white-color dalel-Bold">
+    <span class="fn-16 white-color dalel-Bold">
       {{ "reserve now"|translate}}
     </span>
   </ion-button>
