--- a/src/app/modules/category-details/category-details.page.scss
+++ b/src/app/modules/category-details/category-details.page.scss
@@ -96,14 +96,13 @@
 
 .services {
   display: flex;
-  // border: 1px solid #707070;
   justify-content: space-around;
   border-radius: 10px;
   background-color: #fcfcfc;
   padding: 17px 13px;
   margin-top: 70px;
   margin-bottom: 24px;
-  box-shadow: 0 3px 6px rgb(0 0 0 / 16%); // var(--ion-color-dark-black-rgb, 0.16);
+  box-shadow: 0 3px 6px rgb(0 0 0 / 16%); 
   div {
     flex-direction: row;
     text-align: center;
@@ -158,16 +157,10 @@
   }
 }
 
-// .btn-custom {
-//   margin: 0 5%;
-//   --color: var(--ion-color-white);
-//   font-size: 16;
-//   font-family: "Cairo-Bold";
-//   height: 48px;
-// }
+
 
 ion-button{
-  --box-shadow	: 0 3px 6px rgb(0 0 0 / 16%);
+  //--box-shadow	: 0 3px 6px rgb(0 0 0 / 16%);
   &::part(native){
     height: 50px !important;
     background-image: linear-gradient(
@@ -177,14 +170,7 @@ ion-button{
     );
   }
 }
-// ion-button::part(native) {
-//   height: 50px !important;
-//   background-image: linear-gradient(
-//     to left,
-//     var(--ion-color-primary),
-//     var(--ion-color-secondary)
-//   );
-// }
+
 
 .slider-image{
   height: 62px;
