--- a/src/app/modules/settings/settings.page.html
+++ b/src/app/modules/settings/settings.page.html
@@ -5,7 +5,7 @@
   [isMain]="false"
   class="header-height"
 ></app-header>
-<ion-content class="background ion-padding">
+<ion-content class=" ion-padding">
   <!-- <ion-card class="ion-padding"> -->
   <div
     class="language"
