--- a/src/app/modules/category-details/category-details.page.scss
+++ b/src/app/modules/category-details/category-details.page.scss
@@ -22,7 +22,7 @@
 
 .details-container{
   position: absolute;
-  //height: 60px;
+ 
   width: 92%;
   margin: 0 var(--ion-padding, 16px);
   bottom: -60px;
@@ -31,7 +31,6 @@
 }
 .item-details {
   position: absolute;
-  //height: 60px;
   width: 92%;
   margin: 0 var(--ion-padding, 16px);
   bottom: -60px;
@@ -98,7 +97,7 @@
   display: flex;
   justify-content: space-around;
   border-radius: 10px;
-  background-color: #fcfcfc;
+  background-color: var( --ion-color-white-gray);
   padding: 17px 13px;
   margin-top: 70px;
   margin-bottom: 24px;
@@ -160,7 +159,6 @@
 
 
 ion-button{
-  //--box-shadow	: 0 3px 6px rgb(0 0 0 / 16%);
   &::part(native){
     height: 50px !important;
     background-image: linear-gradient(
@@ -173,5 +171,11 @@ ion-button{
 
 
 .slider-image{
-  height: 62px;
+  height: 100px;
+  width: 100px;
+  object-fit: cover;
+  object-position: right;
 }
+
+
+
