--- a/src/app/modules/auth/login-register/login-register.page.html
+++ b/src/app/modules/auth/login-register/login-register.page.html
@@ -11,10 +11,10 @@
         [(ngModel)]="authType"
       >
         <ion-segment-button value="register" class="register-btn">
-          <ion-label>{{"register"|translate}}</ion-label>
+          <ion-label class="fn-14 dalel-SemiBold">{{"register"|translate}}</ion-label>
         </ion-segment-button>
         <ion-segment-button value="signin" class="signin-btn">
-          <ion-label>{{"signin"|translate}}</ion-label>
+          <ion-label class="fn-14 dalel-SemiBold">{{"signin"|translate}}</ion-label>
         </ion-segment-button>
       </ion-segment>
 
