--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -7,6 +7,9 @@
 ></app-header>
 
 <ion-content class="ion-padding" >
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
   <div class="item-image" *ngIf="itemDetails">
     <img [src]="itemDetails?.first_image" />
     <ion-icon
