--- a/src/app/modules/my-reservations/my-reservations.page.html
+++ b/src/app/modules/my-reservations/my-reservations.page.html
@@ -19,14 +19,14 @@
       [value]="current"
       [ngClass]="reservationsType==current ?'selected':'old-unselected'"
     >
-      <ion-label>{{"current"|translate}}</ion-label>
+      <ion-label class="fn-14 dalel-SemiBold">{{"current"|translate}}</ion-label>
     </ion-segment-button>
 
     <ion-segment-button
       [value]="old"
       [ngClass]="reservationsType==old ?'selected':'current-unselected'"
     >
-      <ion-label>{{"old"|translate}}</ion-label>
+      <ion-label class="fn-14 dalel-SemiBold">{{"old"|translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
 
