--- a/src/app/modules/my-reservations/my-reservations.page.scss
+++ b/src/app/modules/my-reservations/my-reservations.page.scss
@@ -20,21 +20,23 @@ ion-segment {
     --border-radius: 10px 0 0 10px !important;
   }
 }
+
 ion-segment-button {
+  // margin-bottom: 0px !important;
+  // margin-top: 0px !important;
+  // height: 48px;
+  // --background: var(--ion-color-orange-light);
+  // --color-checked: var(--ion-color-white);
+  // --color: var(--ion-color-secondary);
+  // --background-checked: var(--ion-color-primary);
+  // --border-radius: 10px !important;
+  // --indicator-color: none;
   margin-bottom: 0px !important;
   margin-top: 0px !important;
-  height: 48px;
   --background: var(--ion-color-orange-light);
-  --color-checked: var(--ion-color-white);
-  --color: var(--ion-color-secondary);
-  --background-checked: var(--ion-color-primary);
   --border-radius: 10px !important;
-  --indicator-color: none;
-  ion-label {
-    font-size: 14px;
-    font-family: "Cairo-SemiBold";
-  }
 }
+
 ion-card {
   margin-bottom: 16px;
 
@@ -46,20 +48,22 @@ ion-card {
       position: absolute;
       top: 16px;
       color: var(--ion-color-secondary);
-    
     }
+
     .price-ar {
       left: 16px;
     }
+
     .price-en {
       right: 16px;
     }
+
     img {
       width: 100%;
       height: 160px;
       object-fit: cover;
       object-position: initial;
-      filter:brightness(0.34);
+      filter: brightness(0.34);
     }
 
     .title {
