--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.html
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.html
@@ -20,7 +20,7 @@
             <ion-button
               [disabled]="slidingNotAvailable"
               expand="block"
-              class="btn-custom"
+              class="btn-custom fn-16 dalel-Bold"
               (click)="nextSlide()"
             >
               <span>{{"next"|translate}}</span>
@@ -48,7 +48,7 @@
             <ion-button
               [disabled]="slidingNotAvailable"
               expand="block"
-              class="btn-custom"
+              class="btn-custom fn-16 dalel-Bold"
               (click)="nextSlide()"
             >
               <span>{{"next"|translate}}</span>
@@ -76,7 +76,7 @@
             <ion-button
               [disabled]="slidingNotAvailable"
               expand="block"
-              class="btn-custom"
+              class="btn-custom fn-16 dalel-Bold"
               (click)="start()"
             >
               <span>{{"start"|translate}}</span>
