--- a/src/app/modules/onboarding/on-boarding/on-boarding.page.scss
+++ b/src/app/modules/onboarding/on-boarding/on-boarding.page.scss
@@ -66,8 +66,8 @@ ion-content.background {
     width: 100% !important;
     margin: 0px !important;
     --color: var(--ion-color-white);
-    font-size: 16;
-    font-family: "Cairo-Bold";
+    //font-size: 16;
+    //font-family: "Cairo-Bold";
     height: 48px;
   }
 }
