--- a/src/app/modules/language/language.page.html
+++ b/src/app/modules/language/language.page.html
@@ -3,9 +3,9 @@
     class="language"
     [ngClass]="currentlangauge == 'ar' ? 'arabic_padding' : 'english_padding'"
   >
-    <ion-list >
+    <ion-list>
       <ion-radio-group (ionChange)="chooseLanguage($event)">
-        <ion-list-header >
+        <ion-list-header>
           <ion-label>
             <h5 class="title">{{ "choose_langauge"|translate}}</h5></ion-label
           >
@@ -31,7 +31,13 @@
       </ion-radio-group>
     </ion-list>
 
-    <ion-button expand="block" [disabled]="!selectLanguage" class="btn-custom" routerLink="/on-boarding" routerDirection="forward">
+    <ion-button
+      expand="block"
+      [disabled]="!selectLanguage"
+      class="btn-custom fn-16 dalel-Bold"
+      routerLink="/on-boarding"
+      routerDirection="forward"
+    >
       <span>{{"start"|translate}}</span>
     </ion-button>
   </div>
