--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -4,7 +4,7 @@
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
-  <div class="search-section ion-padding-horizontal">
+  <div class="search-section ion-padding-horizontal ion-safe-area-top">
     <div class="search-input">
       <ion-item lines="none" class="search-wrapper">
         <ion-input
