--- a/src/app/modules/auth/chnage-password/chnage-password.page.scss
+++ b/src/app/modules/auth/chnage-password/chnage-password.page.scss
@@ -3,8 +3,13 @@ ion-content.background {
       no-repeat;
   }
 
-ion-item{
-    --highlight-color-focused:var(--ion-color-primary);
-    --highlight-color-valid:var(--ion-color-primary);
-    --highlight-color-invalid:var(--ion-color-primary);
+// ion-item{
+//     --highlight-color-focused:var(--ion-color-primary);
+//     --highlight-color-valid:var(--ion-color-primary);
+//     --highlight-color-invalid:var(--ion-color-primary);
+//   }
+ion-item {
+  &::part(native) {
+    border-bottom-color: var(--ion-color-secondary) !important;
   }
+}
