--- a/src/app/modules/auth/code/code.page.scss
+++ b/src/app/modules/auth/code/code.page.scss
@@ -10,15 +10,15 @@ ion-row {
 }
 ion-item {
   --inner-padding-end: 0px !important;
-  
-}
-ion-item::part(native) {
-  padding: 6px 0px !important;
-  text-align: center;
-  .item-inner {
-    padding-inline-end: 0px !important;
+  &::part(native) {
+    padding: 6px 0px !important;
+    text-align: center;
+    .item-inner {
+      padding-inline-end: 0px !important;
+    }
   }
 }
+
 ion-button {
   margin-bottom: 32px;
 }
