--- a/src/app/modules/auth/edit-profile/edit-profile.page.scss
+++ b/src/app/modules/auth/edit-profile/edit-profile.page.scss
@@ -6,11 +6,15 @@ ion-item {
 
 
 
-    --highlight-color-focused:var(--ion-color-primary);
-    --highlight-color-valid:var(--ion-color-primary);
-    --highlight-color-invalid:var(--ion-color-primary);
+    // --highlight-color-focused:var(--ion-color-primary);
+    // --highlight-color-valid:var(--ion-color-primary);
+    // --highlight-color-invalid:var(--ion-color-primary);
   
-
+    ion-item {
+      &::part(native) {
+        border-bottom-color: var(--ion-color-secondary) !important;
+      }
+    }
     ion-icon {
       width: 20px !important;
       height: 20px !important;
