--- a/src/app/modules/auth/login-register/login-register.page.scss
+++ b/src/app/modules/auth/login-register/login-register.page.scss
@@ -7,14 +7,22 @@ ion-content.bg-right {
     no-repeat;
 }
 
+// :host(.item-fill-none.item-interactive.ion-focus)
+// .item-native, :host(.item-fill-none.item-interactive.item-has-focus)
+// .item-native, :host(.item-fill-none.item-interactive.ion-touched.ion-invalid)
+// .item-native{
 
-ion-item{
-  --highlight-color-focused:var(--ion-color-primary);
-  --highlight-color-valid:var(--ion-color-primary);
-  --highlight-color-invalid:var(--ion-color-primary);
+//   border-bottom-color:var(--ion-color-secondary) !important;
+
+// }
+
+ion-item {
+  &::part(native) {
+    border-bottom-color: var(--ion-color-secondary) !important;
+  }
 }
 
-ion-segment{
-  display: flex;
-  justify-content: space-between;
-}
+// ion-segment{
+//   display: flex;
+//   justify-content: space-between;
+// }
