--- a/src/app/modules/auth/password/password.page.scss
+++ b/src/app/modules/auth/password/password.page.scss
@@ -4,8 +4,14 @@ ion-content.background {
   }
 
   
-ion-item{
-  --highlight-color-focused:var(--ion-color-primary);
-  --highlight-color-valid:var(--ion-color-primary);
-  --highlight-color-invalid:var(--ion-color-primary);
+// ion-item{
+//   --highlight-color-focused:var(--ion-color-primary);
+//   --highlight-color-valid:var(--ion-color-primary);
+//   --highlight-color-invalid:var(--ion-color-primary);
+// }
+
+ion-item {
+  &::part(native) {
+    border-bottom-color: var(--ion-color-secondary) !important;
+  }
 }
