--- a/src/app/modules/my-reservations/my-reservations.page.scss
+++ b/src/app/modules/my-reservations/my-reservations.page.scss
@@ -22,15 +22,15 @@ ion-segment {
 }
 
 ion-segment-button {
-  // margin-bottom: 0px !important;
-  // margin-top: 0px !important;
-  // height: 48px;
-  // --background: var(--ion-color-orange-light);
-  // --color-checked: var(--ion-color-white);
-  // --color: var(--ion-color-secondary);
-  // --background-checked: var(--ion-color-primary);
-  // --border-radius: 10px !important;
-  // --indicator-color: none;
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+  height: 48px;
+  --background: var(--ion-color-orange-light);
+  --color-checked: var(--ion-color-white);
+  --color: var(--ion-color-secondary);
+  --background-checked: var(--ion-color-primary);
+  --border-radius: 10px !important;
+  --indicator-color: none;
   margin-bottom: 0px !important;
   margin-top: 0px !important;
   --background: var(--ion-color-orange-light);
