--- a/src/global.scss
+++ b/src/global.scss
@@ -59,10 +59,10 @@
 
   --ion-background-color: var(--ion-color-white);
   --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
-  --ion-safe-area-top: 16px;
-  --ion-safe-area-right: 16px;
-  --ion-safe-area-bottom: 16px;
-  --ion-safe-area-left: 16px;
+  // --ion-safe-area-top: 16px;
+  // --ion-safe-area-right: 16px;
+  // --ion-safe-area-bottom: 16px;
+  // --ion-safe-area-left: 16px;
   --ion-text-transform: lowercase !important;
   --highlight-color-valid: var(--ion-color-secondary);
   --highlight-color-invalid: var(--ion-color-primary);
@@ -159,7 +159,9 @@ ion-badge {
   }
 
   .auth-container {
-    margin-top: 24px;
+    //margin-top: 24px;
+    margin: 24px 20px 0px;
+    border-radius: 10px;
 
     .auth-container-title {
       text-align: center;
@@ -178,16 +180,16 @@ ion-badge {
 
     ion-segment {
       border-radius: 0px !important;
-    }
 
-    ion-segment-button {
-      height: 48px;
-      --background: rgba(var(--ion-color-secondary-rgb), 0.51);
-      --color-checked: var(--ion-color-white);
-      --color: var(--ion-color-secondary);
-      --background-checked: var(--ion-color-primary);
-      --border-radius: 0 10px 0 0;
-      --indicator-color: none;
+      ion-segment-button {
+        height: 48px;
+        --background: rgba(var(--ion-color-secondary-rgb), 0.51);
+        --color-checked: var(--ion-color-white);
+        --color: var(--ion-color-secondary);
+        --background-checked: var(--ion-color-primary);
+        //--border-radius: 0 10px 0 0;
+        --indicator-color: none;
+      }
     }
 
     .auth-form {
