--- a/src/app/modules/reservation/reservation.page.html
+++ b/src/app/modules/reservation/reservation.page.html
@@ -14,6 +14,7 @@
     [type]="type"
     [format]="'YYYY-MM-DD'"
     [dir]="currentLanguage=='ar'?'rtl':'ltr'"
+    class="my-custom-calender"
   >
   </ion-calendar>
 
