--- a/src/global.scss
+++ b/src/global.scss
@@ -312,3 +312,7 @@ ion-tab-bar {
   --background: transparent;
   --spinner-color: var(--ion-color-primary);
 }
+
+.swiper-zoom-container{
+  height: auto !important;
+}
