--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -1,8 +1,9 @@
 <app-header
   [title]="'details'"
   [isEditable]="false"
-  [backwardRoute]='"/tabs/main/categories/"'
+  [backwardRoute]='"/tabs/main/categories"'
   [isMain]="false"
+  [categoryId]="itemDetails?.section_id"
   class="header-height"
 ></app-header>
 
