--- a/src/app/modules/main/main.page.html
+++ b/src/app/modules/main/main.page.html
@@ -4,6 +4,10 @@
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
+
+
+  <!-- <ion-datetime  (ionChange)="getDate($event)"presentation="time-date" locale="en"></ion-datetime> -->
+
   <div class="search-section ion-padding-horizontal ion-safe-area-top">
     <div class="search-input">
       <ion-item lines="none" class="search-wrapper">
