--- a/ios/App/App/public/styles.css
+++ b/ios/App/App/public/styles.css
@@ -109,26 +109,33 @@
   --ion-color-dark-black-shade: #000000;
   --ion-color-dark-black-tint: #1a1a1a;
   /** gary **/
-  --ion-color-gary: #B5B5B5;
-  --ion-color-gary-rgb: 181,181,181;
+  --ion-color-gary: #b5b5b5;
+  --ion-color-gary-rgb: 181, 181, 181;
   --ion-color-gary-contrast: #000000;
-  --ion-color-gary-contrast-rgb: 0,0,0;
+  --ion-color-gary-contrast-rgb: 0, 0, 0;
   --ion-color-gary-shade: #9f9f9f;
   --ion-color-gary-tint: #bcbcbc;
   /** light-gray **/
   --ion-color-light-gray: #e1e1e1;
-  --ion-color-light-gray-rgb: 225,225,225;
+  --ion-color-light-gray-rgb: 225, 225, 225;
   --ion-color-light-gray-contrast: #000000;
-  --ion-color-light-gray-contrast-rgb: 0,0,0;
+  --ion-color-light-gray-contrast-rgb: 0, 0, 0;
   --ion-color-light-gray-shade: #c6c6c6;
   --ion-color-light-gray-tint: #e4e4e4;
   /** lighted-gray **/
   --ion-color-lighted-gray: #d4d4d4;
-  --ion-color-lighted-gray-rgb: 212,212,212;
+  --ion-color-lighted-gray-rgb: 212, 212, 212;
   --ion-color-lighted-gray-contrast: #000000;
-  --ion-color-lighted-gray-contrast-rgb: 0,0,0;
+  --ion-color-lighted-gray-contrast-rgb: 0, 0, 0;
   --ion-color-lighted-gray-shade: #bbbbbb;
   --ion-color-lighted-gray-tint: #d8d8d8;
+  /** white-gray **/
+  --ion-color-white-gray: #fcfcfc;
+  --ion-color-white-gray-rgb: 252, 252, 252;
+  --ion-color-white-gray-contrast: #000000;
+  --ion-color-white-gray-contrast-rgb: 0, 0, 0;
+  --ion-color-white-gray-shade: #dedede;
+  --ion-color-white-gray-tint: #fcfcfc;
 }
 .ion-color-primary {
   --ion-color-base: var(--ion-color-primary);
@@ -209,6 +216,14 @@
   --ion-color-contrast-rgb: var(--ion-color-light-gray-contrast-rgb);
   --ion-color-shade: var(--ion-color-light-gray-shade);
   --ion-color-tint: var(--ion-color-light-gray-tint);
+}
+.ion-color-white-gray {
+  --ion-color-base: var(--ion-color-white-gray);
+  --ion-color-base-rgb: var(--ion-color-white-gray-rgb);
+  --ion-color-contrast: var(--ion-color-white-gray-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-white-gray-contrast-rgb);
+  --ion-color-shade: var(--ion-color-white-gray-shade);
+  --ion-color-tint: var(--ion-color-white-gray-tint);
 }
 .primary-color {
   color: var(--ion-color-primary) !important;
@@ -2146,6 +2161,10 @@ button.swiper-pagination-bullet {
 :root {
   --ion-background-color: var(--ion-color-white);
   --ion-font-family: -apple-system, BlinkMacSystemFont, "Cairo-Regular";
+  --ion-safe-area-top: 16px;
+  --ion-safe-area-right: 16px;
+  --ion-safe-area-bottom: 16px;
+  --ion-safe-area-left: 16px;
   --ion-text-transform: lowercase !important;
   --highlight-color-valid: var(--ion-color-secondary);
   --highlight-color-invalid: var(--ion-color-primary);
@@ -2155,6 +2174,12 @@ button.swiper-pagination-bullet {
 }
 :root ion-card {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16) !important;
+}
+:root ion-fab-button {
+  --box-shadow: none !important;
+}
+ion-input {
+  --color: var(--ion-color-primary) !important;
 }
 :root[dir=rtl] ion-menu::part(container) {
   border-radius: 80px 0px 0px 0px;
@@ -2179,9 +2204,6 @@ ion-badge {
 ion-badge span {
   font-size: 7px;
 }
-.badge-color {
-  color: var(--ion-color-white);
-}
 .my-custom-class div#alert-1-msg {
   margin-top: 13px !important;
   color: var(--ion-color-dark-black) !important;
@@ -2199,9 +2221,6 @@ ion-badge span {
 .unfocused {
   --border-color: var(--ion-color-secondary) !important;
 }
-ion-input {
-  --color: var(--ion-color-primary) !important;
-}
 .swiper-slide {
   display: block !important;
 }
@@ -2214,8 +2233,6 @@ ion-input {
 .btn-custom {
   width: 35%;
   --color: var(--ion-color-white);
-  font-size: 16;
-  font-family: "Cairo-Bold";
   height: 48px;
 }
 .auth-login-register .logo {
@@ -2254,10 +2271,6 @@ ion-input {
   --background-checked: var(--ion-color-primary);
   --border-radius: 0 10px 0 0;
   --indicator-color: none;
-}
-.auth-login-register .auth-container ion-segment-button ion-label {
-  font-size: 14px;
-  font-family: "Cairo-SemiBold";
 }
 .auth-login-register .auth-container .auth-form {
   margin: 24px 16px;
@@ -2350,9 +2363,6 @@ ion-tab-bar ion-tab-button ion-icon {
 .my-loading-class {
   --background: transparent;
   --spinner-color: var(--ion-color-primary);
-}
-ion-fab-button {
-  --box-shadow: none !important;
 }
 
 /*# sourceMappingURL=styles.css.map*/
