--- a/src/app/modules/auth/password/password.page.scss
+++ b/src/app/modules/auth/password/password.page.scss
@@ -10,8 +10,8 @@ ion-content.background {
 //   --highlight-color-invalid:var(--ion-color-primary);
 // }
 
-ion-item {
-  &::part(native) {
-    border-bottom-color: var(--ion-color-secondary) !important;
-  }
-}
+// ion-item {
+//   &::part(native) {
+//     border-bottom-color: var(--ion-color-secondary) !important;
+//   }
+// }
