--- a/src/app/modules/auth/chnage-password/chnage-password.page.scss
+++ b/src/app/modules/auth/chnage-password/chnage-password.page.scss
@@ -8,8 +8,8 @@ ion-content.background {
 //     --highlight-color-valid:var(--ion-color-primary);
 //     --highlight-color-invalid:var(--ion-color-primary);
 //   }
-ion-item {
-  &::part(native) {
-    border-bottom-color: var(--ion-color-secondary) !important;
-  }
-}
+// ion-item {
+//   &::part(native) {
+//     border-bottom-color: var(--ion-color-secondary) !important;
+//   }
+// }
