--- a/src/app/modules/auth/code/code.page.scss
+++ b/src/app/modules/auth/code/code.page.scss
@@ -2,14 +2,58 @@ ion-content.background {
   --background: url(./../../../../assets/images/authBg-right.png) 0 0 /100% 100%
     no-repeat;
 }
-.auth-form ion-item {
-  margin-bottom: 0px !important;
-}
-ion-row {
+
+.code-conatiner{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
   margin-bottom: 24px;
+
+  ion-item{
+    margin-right: 9px;
+    margin-left: 9px;
+    margin-bottom: 0px !important;
+
+    ion-input {
+      text-align: center;
+      --padding-end: 0px !important;
+      .native-input {
+        font-size: 24px !important;
+        padding: 0px;
+        margin: 0px;
+        font-family: "Cairo-SemiBold";
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
+      }
+    }
+  }
+
+  .code-unfocused {
+    &::part(native) {
+      --border-color: var(--ion-color-secondary) !important;
+      border-bottom-color: var(--ion-color-secondary) !important;
+    }
+  }
+  
+  .code-focused {
+    &::part(native) {
+      --border-color: var(--ion-color-primary) !important;
+      border-bottom-color: var(--ion-color-primary) !important;
+      background-color: var(--ion-color-primary) !important;
+     
+    }
+    ion-input{
+      --color: var(--ion-color-white) !important;
+    }
+  }
+  
 }
+
+
+
+
 ion-item {
-  --inner-padding-end: 0px !important;
   &::part(native) {
     padding: 6px 0px !important;
     text-align: center;
@@ -17,24 +61,13 @@ ion-item {
       padding-inline-end: 0px !important;
     }
   }
+  --inner-padding-end: 0px !important;
 }
+
+
 
 ion-button {
   margin-bottom: 32px;
 }
-ion-input {
-  text-align: center;
-  --padding-end: 0px !important;
-  .native-input {
-    font-size: 24px !important;
-    padding: 0px;
-    margin: 0px;
-    font-family: "Cairo-SemiBold";
-    padding-top: 0px !important;
-    padding-bottom: 0px !important;
-  }
-}
-
-
 
 
