--- a/src/app/modules/auth/edit-profile/edit-profile.page.scss
+++ b/src/app/modules/auth/edit-profile/edit-profile.page.scss
@@ -10,11 +10,11 @@ ion-item {
     // --highlight-color-valid:var(--ion-color-primary);
     // --highlight-color-invalid:var(--ion-color-primary);
   
-    ion-item {
-      &::part(native) {
-        border-bottom-color: var(--ion-color-secondary) !important;
-      }
-    }
+    // ion-item {
+    //   &::part(native) {
+    //     border-bottom-color: var(--ion-color-secondary) !important;
+    //   }
+    // }
     ion-icon {
       width: 20px !important;
       height: 20px !important;
