--- a/src/app/components/custom-card/custom-card.component.scss
+++ b/src/app/components/custom-card/custom-card.component.scss
@@ -11,13 +11,13 @@ ion-card {
     object-position: initial;
 
     border-radius: 5px;
-    //opacity: 0.62;
-    //filter: brightness(0.62);
+    
   }
 
   .title {
     position: absolute;
     bottom: 30px;
+    margin-bottom: 2px;
     p {
       margin: 0px;
     }
@@ -35,7 +35,7 @@ ion-card {
   .location-address {
     position: absolute;
 
-    bottom: 9px;
+    bottom: 5px;
     p {
       margin: 0px;
     }
@@ -43,7 +43,7 @@ ion-card {
 
   .address-detail {
     position: absolute;
-    bottom: 5px;
+    bottom: 2px;
     ion-icon {
       font-size: 28px;
     }
